added complete delete events + other delete endpoints